now using new app spec with icon, tags, and screenshots

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop-tutorial",
+  "name": "atted-app",
   "private": true,
   "dependencies": {
     "datatables.net": "^1.10.12",
